2667 [TitleSelector]        added support for multi-angle DVD sources
     [OneClick]             added support for multi-angle DVD sources
2666 [TitleSelector]        improved title selector for DVD/Blu-ray sources
2665 [OneClick]             added support for folders as drag&drop source of the input control
2664 [IFOParser]            improved type detection
2663 [FileIndexer]          fixed processing of DVDs with only one PGC (regression of 2658)
2662 [IFOParser]            fixed sometimes not able to get the language information (regression of 2657)
2661 [Main]                 reverted 2639. Bug #843
2660 [Presets]              fixed not changing the selected preset if no change has been made in the configuration window. Bug #844
2659 [VobSubber]            fixed subtitle export for multi-angle discs
2658 [OneClick]+[FileIndexer] only use pgcdemux if it is a multi-pgc or multi-angle DVD source
2657 [IFOParser]            add subtitle type only if there are multiple types
2656 [OneClick]+[ChapterCreator] improved DVD/Blu-ray structure detection
2655 [IFOParser]            fixed missing first subtitle track if it contains more than one subtitle type
                            added type information (4:3/wide/letterbox/pan&scan) to the description of the subtitle track
                            added multi-angle detection
2653 [AudioEncoder]         fixed an error when aborting the job during the initial steps
2652 [HD Streams Extractor] for DVD/Blu-ray sources a prefix and suffix is attached to the output file name. Feature request #597
                            added warning if "Haali Matroska Muxer" is required
2651 [FileIndexer]          added IFO as supported input files
                            improved PGC handling
2650 [OneClick] +           for DVD/Blu-ray sources a prefix and suffix is attached to the output file name. Feature request #597
     [FileIndexer]          pgcdemux will be used in any case as a workaround for multi-angle DVDs